--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,71 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
+
+
+h1 {
+    margin-top: 20px;
+}
+
+.spinner {
+    width: 99px;
+    margin: auto;
+    margin-top: 20%;
+}
+
+form {
+    margin-left: 5%;
+    width: 40%;
+}
+
+.courseListLayout > .courseTable {
+    width: 90%;
+    margin: auto;
+}
+
+a {
+    text-decoration: none !important;;
+}
+
+.add-course-btn{
+    margin-top: 2%;
+    margin-left: 5%;
+    margin-bottom: 2%;
+}
+
+.course-page-header{
+    margin-left: 5%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
